--- a/app/views/comment/new.rhtml
+++ b/app/views/comment/new.rhtml
@@ -12,7 +12,7 @@
 <%= foi_error_messages_for :comment %>
 
 <h1><%= _('Add an annotation')%></h1>
-<h2>to &ldquo;<%=request_link(@info_request)%>&rdquo;</h2>
+<h2>solicitării &ldquo;<%=request_link(@info_request)%>&rdquo;</h2>
 
 <p>
 <%= _('Annotations are so anyone, including you, can help the requester with their request. For example:')%>
